# deepin-system-monitor

./: .clog.toml  .gitignore  .gitlab-ci.yml  .project  .project.json  CHANGELOG.md  CMakeLists.txt  README.md  README.zh_CN.md  com.deepin.pkexec.deepin-system-monitor.policy  com.deepin.pkexec.deepin-system-monitor.policy.orig  config.h  config.h.in  deepin-system-monitor.desktop  deepin-system-monitor.pro  deepin-system-monitor.qrc  deepin_system_monitor.pro  helper.hpp  lupdate_main.sh  translations.pri
deepin-system-monitor-daemon/: CMakeLists.txt  com.deepin.SystemMonitor.Daemon.service  cpuprofile.cpp  cpuprofile.h  deepin-system-monitor-daemon.desktop  deepin-system-monitor-daemon.json  deepin-system-monitor-daemon.service  main.cpp  memoryprofile.cpp  memoryprofile.h  settinghandler.cpp  settinghandler.h  systemmonitorservice.cpp  systemmonitorservice.h
deepin-system-monitor-daemon/assets/: deepin-system-monitor-daemon.qrc
deepin-system-monitor-daemon/misc/: com.deepin.SystemMonitor.Daemon.xml
deepin-system-monitor-daemon/src/: cpuprofile.cpp  cpuprofile.h  ddlog.h  logger.cpp  logger.h  memoryprofile.cpp  memoryprofile.h  plugin.cpp  settinghandler.cpp  settinghandler.h  systemmonitorservice.cpp  systemmonitorservice.h
deepin-system-monitor-daemon/translations/: deepin-system-monitor-daemon_az.ts  deepin-system-monitor-daemon_bo.ts  deepin-system-monitor-daemon_ca.ts  deepin-system-monitor-daemon_cs.ts  deepin-system-monitor-daemon_de.ts  deepin-system-monitor-daemon_en.ts  deepin-system-monitor-daemon_en_US.ts  deepin-system-monitor-daemon_es.ts  deepin-system-monitor-daemon_fi.ts  deepin-system-monitor-daemon_fr.ts  deepin-system-monitor-daemon_hr.ts  deepin-system-monitor-daemon_hu.ts  deepin-system-monitor-daemon_id.ts  deepin-system-monitor-daemon_it.ts  deepin-system-monitor-daemon_ms.ts  deepin-system-monitor-daemon_nl.ts  deepin-system-monitor-daemon_pl.ts  deepin-system-monitor-daemon_pt.ts  deepin-system-monitor-daemon_pt_BR.ts  deepin-system-monitor-daemon_sq.ts  deepin-system-monitor-daemon_sr.ts  deepin-system-monitor-daemon_tr.ts  deepin-system-monitor-daemon_ug.ts  deepin-system-monitor-daemon_uk.ts  deepin-system-monitor-daemon_zh_CN.ts  deepin-system-monitor-daemon_zh_HK.ts  deepin-system-monitor-daemon_zh_TW.ts  update.sh
deepin-system-monitor-dde-shell-plugin/: CMakeLists.txt  main.cpp  systemmonitorapplet.cpp  systemmonitorapplet.h  systemmonitorprober.cpp  systemmonitorprober.h
deepin-system-monitor-dde-shell-plugin/package/: main.qml  metadata.json
deepin-system-monitor-main/: CMakeLists.txt  accessible.h  accessibledefine.h  application.cpp  application.h  compact_cpu_monitor.cpp  compact_cpu_monitor.h  compact_disk_monitor.cpp  compact_disk_monitor.h  compact_gpu_monitor.cpp  compact_gpu_monitor.h  compact_memory_monitor.cpp  compact_memory_monitor.h  compact_network_monitor.cpp  compact_network_monitor.h  config.h.in  cpu_monitor.cpp  cpu_monitor.h  ddlog.h  detailwidgetmanager.cpp  detailwidgetmanager.h  gpu_monitor.cpp  gpu_monitor.h  logger.cpp  main.cpp  memory_monitor.cpp  memory_monitor.h  network_monitor.cpp  network_monitor.h  settings.cpp  settings.h  smooth_curve_generator.cpp  smooth_curve_generator.h  stack_trace.h
deepin-system-monitor-main/assets/: CMakeLists.txt  deepin-system-monitor.qrc  org.deepin.monitor-main.json  org.deepin.system-monitor.main.json
deepin-system-monitor-main/common/: base_thread.h  common.cpp  common.h  error_context.cpp  error_context.h  eventlogutils.cpp  eventlogutils.h  han_latin.cpp  han_latin.h  hash.cpp  hash.h  perf.cpp  perf.h  sample.h  thread_manager.cpp  thread_manager.h  time_period.cpp  time_period.h
deepin-system-monitor-main/dbus/: dbus_common.h  dbus_object.cpp  dbus_object.h  dbus_properties_interface.cpp  dbus_properties_interface.h  dbusalarmnotify.cpp  dbusalarmnotify.h  dbusforsystemomonitorpluginservce.cpp  dbusforsystemomonitorpluginservce.h  environment_file.cpp  environment_file.h  systemd1_manager_interface.cpp  systemd1_manager_interface.h  systemd1_service_interface.cpp  systemd1_service_interface.h  systemd1_unit_interface.cpp  systemd1_unit_interface.h  unit_file_info.cpp  unit_file_info.h  unit_info.cpp  unit_info.h
deepin-system-monitor-main/gui/: accounts_widget.cpp  accounts_widget.h  animation_stackedwidget.cpp  animation_stackedwidget.h  block_dev_detail_view_widget.cpp  block_dev_detail_view_widget.h  (+66 more)
deepin-system-monitor-plugin/: CMakeLists.txt  com.deepin.dde.dock.module.system-monitor.gschema.xml  com.deepin.system.monitor.plugin.gschema.xml  ddlog.h  deepin-system-monitor-plugin.pc.in  environments.h.in  logger.cpp  system-monitor.json  system-monitor_20.json
deepin-system-monitor-plugin-popup/: CMakeLists.txt  application.cpp  application.h  com.deepin.SystemMonitorPluginPopup.conf  com.deepin.SystemMonitorPluginPopup.service  ddlog.h  deepin-system-monitor-plugin-popup.desktop  environments.h.in  logger.cpp  logger.h  main.cpp
deepin-system-monitor-server/: CMakeLists.txt  com.deepin.SystemMonitorServer.service
deepin-system-monitor-system-server/: CMakeLists.txt
src/: CMakeLists.txt  accessible.h  accessibledefine.h  application.cpp  application.h  attributes_dialog.cpp  attributes_dialog.h  chinese2pinyin.cpp  chinese2pinyin.h  compact_cpu_monitor.cpp  compact_cpu_monitor.h  compact_disk_monitor.cpp  compact_disk_monitor.h  compact_memory_monitor.cpp  compact_memory_monitor.h  compact_network_monitor.cpp  compact_network_monitor.h  config.h.in  constant.h  cpu_monitor.cpp  cpu_monitor.h  cpu_tools.cpp  cpu_tools.h  disk_monitor.cpp  disk_monitor.h  disk_tools.cpp  disk_tools.h  dsimplelistitem.cpp  dsimplelistitem.h  dsimplelistview.cpp  dsimplelistview.h  environments.h.in  event_monitor.cpp  event_monitor.h  find_window_title.cpp  find_window_title.h  hashqstring.h  interactive_kill.cpp  interactive_kill.h  list_item.cpp  (+45 more)
tests/: CMakeLists.txt  addr_any.h  addr_pri.h  cmake-lcov-test.sh  elfio.hpp  main.cpp  test-prj-running.sh  ut_application.cpp  ut_compact_cpu_monitor.cpp  ut_compact_disk_monitor.cpp  ut_compact_memory_monitor.cpp
(+1742 files in other folders)
